--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^6.1.6",
     "@supabase/supabase-js": "^2.46.1",
+    "@types/uuid": "^10.0.0",
     "browser-image-compression": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "formik": "^2.4.6",
     "install": "^0.13.0",
     "mysql2": "^3.11.4",
     "npm": "^10.9.1",
@@ -29,12 +31,14 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
+    "react-helmet-async": "^2.0.5",
     "react-image-gallery": "^1.3.0",
     "react-image-lightbox": "^5.1.4",
     "react-modal-image": "^2.6.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.28.0",
-    "rollup-plugin-polyfill-node": "^0.13.0"
+    "rollup-plugin-polyfill-node": "^0.13.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
