--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.2.0",
+    "@dnd-kit/sortable": "^9.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.2.0",
@@ -26,6 +28,7 @@
     "mysql2": "^3.11.4",
     "npm": "^10.9.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.5",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -34,6 +37,7 @@
     "react-helmet-async": "^2.0.5",
     "react-image-gallery": "^1.3.0",
     "react-image-lightbox": "^5.1.4",
+    "react-list-drag-and-drop": "^0.9.2",
     "react-modal-image": "^2.6.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.28.0",
@@ -44,6 +48,7 @@
     "@eslint/js": "^9.13.0",
     "@types/node": "^22.9.3",
     "@types/react": "^18.3.12",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.1",
     "@types/react-image-gallery": "^1.2.4",
     "@types/react-router-dom": "^5.3.3",
