--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-modal-image": "^2.6.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.2",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "uuid": "^11.0.3"
   },
@@ -60,9 +61,11 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
