--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.4.0",
     "react-image-gallery": "^1.3.0",
     "react-image-lightbox": "^5.1.4",
     "react-list-drag-and-drop": "^0.9.2",
@@ -43,7 +44,8 @@
     "react-router-dom": "^6.28.0",
     "react-toastify": "^11.0.2",
     "rollup-plugin-polyfill-node": "^0.13.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
