--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-image-gallery": "^1.3.0",
     "react-image-lightbox": "^5.1.4",
     "react-list-drag-and-drop": "^0.9.2",
+    "react-loader-spinner": "^6.1.6",
     "react-modal-image": "^2.6.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.28.0",
