--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.1.6",
     "@supabase/supabase-js": "^2.46.1",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
