--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-sitemap": "node generate-sitemap.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.2.0",
@@ -46,6 +47,7 @@
     "react-router-dom": "^6.28.0",
     "react-toastify": "^11.0.2",
     "rollup-plugin-polyfill-node": "^0.13.0",
+    "sitemap": "^8.0.0",
     "uuid": "^11.0.3",
     "yup": "^1.6.1"
   },
